# spln-2223

tpc1/: ex.py  markdown.md  medicina.html  medicina2.json  medicina2.txt  medicina_ind.html  medicinas.html
tpc2/: ex.py  exemplo.txt  lex.py  markdown.md  parser.out  parsetab.py  yacc.py
tpc4/: final.txt  grep.txt  harry_potter.txt  marcacao_nomes_completos.txt  markdown.md  nomes.txt  nomes_completos.txt  ocorrencias.txt  ocorrencias_rip.txt  tokenizador.py
tpc5/tokenizador/: LICENSE  markdown.md  pyproject.toml  tokenizer.md
tpc5/tokenizador/tokenizador/: __init__.py
tpc5/tokenizador/tokenizador/conf/: abrev.txt
tpc6/: expresso.py  markdown.md
tpc6/artigos/2015_05_02/: Autores.xml
tpc6/artigos/2018_05_21/: Autores.xml
tpc6/artigos/2020_04_07/: Autores.xml
tpc6/artigos/2021_03_02/: Autores.xml
tpc6/artigos/2023_04_20/: Ler ou não ler a deliberação que despediu a líder executiva da TAP, eis a questão que animou a Comissão de Inquérito.xml  Medina admite invocar “sigilo” se comissão da TAP pedir e-mails com argumentos para afastar a presidente executiva.xml
tpc6/artigos/2023_04_21/: "Eu, se fosse a si, Lula, não vinha a Portugal" e as consequências de pensar que se pode dar lições de política externa ao Brasil.xml  Até o PS já pede esclarecimentos ao Governo: contradições e críticas sobre um parecer que, afinal, não existe.xml  Dados contrariam argumentos racistas de Ventura: mais imigração resultou em menos crime. Oiça o último episódio de "Entre Deus e o Diabo".xml  (+3 more)
