[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tokenizador"
authors = [{name = "private", email = "pg50418@alunos.uminho.pt"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["spacy"]
readme = "tokenizer.md"

[project.scripts]
tok = "tokenizador:main"